--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "israeli-static",
    "metadata": {},
    "outputs": [
@@ -42,8 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "State loaded from file: {'client_id': '7d8fe022-2fba-4caa-bab8-cef3d44e096a', 'client_secret': 'dd79617b-1f07-4ac1-b0e2-0c39566e113d'}\n",
-      "client_id: 7d8fe022-2fba-4caa-bab8-cef3d44e096a [REUSED]\n",
+      "client_id: 337abd81-01fe-4721-99c7-c4f89421a329\n",
       "Client state saved to file: state.json\n"
      ]
     }
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "hungry-morris",
    "metadata": {
     "tags": []
@@ -97,7 +96,7 @@
     "#-------------------------------------------------------------------------------\n",
     "# Authenticate as user 'demoA' and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
-    "USER_NAME=\"userA\"\n",
+    "USER_NAME=\"eric\"\n",
     "USER_PASSWORD=\"defaultPWD\"\n",
     "user_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)"
    ]
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "ordered-heath",
    "metadata": {},
    "outputs": [],
@@ -142,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "considerable-timeline",
    "metadata": {},
    "outputs": [],
@@ -162,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "widespread-investing",
    "metadata": {},
    "outputs": [
@@ -170,8 +169,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ADES WPS endpoint: http://ades.test.185.52.193.87.nip.io/userA/zoo\n",
-      "ADES API Processes endpoint: http://ades.test.185.52.193.87.nip.io/userA/wps3\n"
+      "ADES WPS endpoint: http://ades.test.185.52.193.87.nip.io/eric/zoo\n",
+      "ADES API Processes endpoint: http://ades.test.185.52.193.87.nip.io/eric/wps3\n"
      ]
     }
    ],
@@ -198,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "retired-corner",
    "metadata": {
     "tags": []
@@ -208,11 +207,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Request] GET => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes\n",
+      "[Request] GET => http://ades.test.185.52.193.87.nip.io/eric/wps3/processes\n",
       "[Request] POST => https://test.185.52.193.87.nip.io/oxauth/restv1/token\n",
-      "[Request] GET => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes\n",
+      "[Request] GET => http://ades.test.185.52.193.87.nip.io/eric/wps3/processes\n",
       "[Process List] = 200 (OK)\n",
-      "Processes: ['GetStatus', 's-expression-0_0_2', 'DeployProcess', 'UndeployProcess']\n"
+      "Processes: ['GetStatus', 'nhi-0_0_3', 'DeployProcess', 'UndeployProcess']\n"
      ]
     }
    ],
@@ -237,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "chubby-queens",
    "metadata": {},
    "outputs": [
@@ -246,9 +245,9 @@
      "output_type": "stream",
      "text": [
       "Application details read from file: ../data/app-deploy-body-cwl.json\n",
-      "[Request] POST => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes\n",
+      "[Request] POST => http://ades.test.185.52.193.87.nip.io/eric/wps3/processes\n",
       "[Request] POST => https://test.185.52.193.87.nip.io/oxauth/restv1/token\n",
-      "[Request] POST => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes\n",
+      "[Request] POST => http://ades.test.185.52.193.87.nip.io/eric/wps3/processes\n",
       "[Deploy Response] = 201 (CREATED)\n"
      ]
     }
@@ -270,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "received-attitude",
    "metadata": {
     "tags": []
@@ -280,11 +279,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Request] GET => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes\n",
+      "[Request] GET => http://ades.test.185.52.193.87.nip.io/eric/wps3/processes\n",
       "[Request] POST => https://test.185.52.193.87.nip.io/oxauth/restv1/token\n",
-      "[Request] GET => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes\n",
+      "[Request] GET => http://ades.test.185.52.193.87.nip.io/eric/wps3/processes\n",
       "[Process List] = 200 (OK)\n",
-      "Processes: ['GetStatus', 'nhi-0_0_3', 's-expression-0_0_2', 'DeployProcess', 'UndeployProcess']\n"
+      "Processes: ['GetStatus', 'nhi-0_0_3', 'DeployProcess', 'UndeployProcess']\n"
      ]
     }
    ],
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "cubic-census",
    "metadata": {},
    "outputs": [
@@ -315,12 +314,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Request] GET => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes/nhi-0_0_3\n",
+      "[Request] GET => http://ades.test.185.52.193.87.nip.io/eric/wps3/processes/nhi-0_0_3\n",
       "[Request] POST => https://test.185.52.193.87.nip.io/oxauth/restv1/token\n",
-      "[Request] GET => http://ades.test.185.52.193.87.nip.io/userA/wps3/processes/nhi-0_0_3\n",
+      "[Request] GET => http://ades.test.185.52.193.87.nip.io/eric/wps3/processes/nhi-0_0_3\n",
       "[App Details] = 200 (OK)\n",
       "STATUS = 200 OK\n",
-      "HEADERS = {'Server': 'nginx/1.19.1', 'Date': 'Wed, 28 Apr 2021 13:39:25 GMT', 'Content-Type': 'application/json;charset=UTF-8', 'Transfer-Encoding': 'chunked', 'Vary': 'Accept-Encoding', 'X-Powered-By': 'ZOO@ZOO-Project', 'Content-Encoding': 'gzip'}\n",
+      "HEADERS = {'Server': 'nginx/1.19.1', 'Date': 'Fri, 07 May 2021 12:46:17 GMT', 'Content-Type': 'application/json;charset=UTF-8', 'Transfer-Encoding': 'chunked', 'Vary': 'Accept-Encoding', 'X-Powered-By': 'ZOO@ZOO-Project', 'Content-Encoding': 'gzip'}\n",
       "BODY = {\n",
       "  \"process\": {\n",
       "    \"id\": \"nhi-0_0_3\",\n",
@@ -442,13 +441,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "royal-smooth",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Application execute details read from file: ../data/app-execute-body.json\n",
+      "[Request] POST => http://ades.test.185.52.193.87.nip.io/eric/wps3/processes/nhi-0_0_3/jobs\n",
+      "[Request] POST => https://test.185.52.193.87.nip.io/oxauth/restv1/token\n",
+      "[Request] POST => http://ades.test.185.52.193.87.nip.io/eric/wps3/processes/nhi-0_0_3/jobs\n",
+      "[Execute Response] = 201 (CREATED) => job=/eric/watchjob/processes/nhi-0_0_3/jobs/3c6bdffe-af32-11eb-b802-56ffdbaa8a56\n"
+     ]
+    }
+   ],
    "source": [
     "# API Processes - Execute Application\n",
     "response, ades_access_token, job_location_path = demo.proc_execute_application(ades_proc_url, app_name, \"../data/app-execute-body.json\", id_token=user_id_token, access_token=ades_access_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9d817f9b-2c37-43a4-b8ad-8207b39f7c09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3c6bdffe-af32-11eb-b802-56ffdbaa8a56\n"
+     ]
+    }
+   ],
+   "source": [
+    "jobid = response.headers[\"Location\"].rsplit('/', 1)[-1]\n",
+    "print(jobid)"
    ]
   },
   {
@@ -465,10 +495,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "played-alliance",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Request] GET => http://ades.test.185.52.193.87.nip.io/eric/watchjob/processes/nhi-0_0_3/jobs/3c6bdffe-af32-11eb-b802-56ffdbaa8a56\n",
+      "[Request] POST => https://test.185.52.193.87.nip.io/oxauth/restv1/token\n",
+      "[Request] GET => http://ades.test.185.52.193.87.nip.io/eric/watchjob/processes/nhi-0_0_3/jobs/3c6bdffe-af32-11eb-b802-56ffdbaa8a56\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:46:38 - running\n",
+      "STATUS = 200 OK\n",
+      "HEADERS = {'Server': 'nginx/1.19.1', 'Date': 'Fri, 07 May 2021 12:46:38 GMT', 'Content-Type': 'application/json;charset=UTF-8', 'Transfer-Encoding': 'chunked', 'Vary': 'Accept-Encoding', 'Content-Encoding': 'gzip'}\n",
+      "BODY = {\n",
+      "  \"jobID\": \"3c6bdffe-af32-11eb-b802-56ffdbaa8a56\",\n",
+      "  \"status\": \"running\",\n",
+      "  \"message\": \"running\",\n",
+      "  \"progress\": \"0\",\n",
+      "  \"links\": [\n",
+      "    {\n",
+      "      \"href\": \"http://ades.test.185.52.193.87.nip.io//eric/watchjob/processes/nhi-0_0_3/jobs/3c6bdffe-af32-11eb-b802-56ffdbaa8a56\",\n",
+      "      \"rel\": \"self\",\n",
+      "      \"type\": \"application/json\",\n",
+      "      \"title\": \"get Status\"\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# API Processes - Job Status\n",
     "response, ades_access_token, status = demo.proc_get_job_status(ades_base_url, job_location_path, id_token=user_id_token, access_token=ades_access_token)\n",
@@ -487,10 +544,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "hindu-surfing",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Job Status] = 200 (OK) => 07/05/2021 12:46:57 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:47:09 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:47:22 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:47:34 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:47:47 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:47:59 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:48:11 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:48:24 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:48:36 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:48:48 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:49:00 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:49:14 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:49:26 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:49:38 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:49:50 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:50:02 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:50:15 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:50:27 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:50:40 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:50:52 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:51:06 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:51:18 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:51:30 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:51:42 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:51:55 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:52:07 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:52:20 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:52:32 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:52:45 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:52:57 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:53:09 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:53:22 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:53:34 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:53:46 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:53:58 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:54:11 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:54:23 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:54:35 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:54:48 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:55:00 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:55:13 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:55:25 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:55:39 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:55:51 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:56:04 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:56:16 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:56:28 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:56:40 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:56:53 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:57:05 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:57:17 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:57:30 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:57:42 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:57:54 - running\n",
+      "[Job Status] = 200 (OK) => 07/05/2021 12:58:07 - failed\n"
+     ]
+    }
+   ],
    "source": [
     "# API Processes - Job Status (keep polling for completion)\n",
     "response, ades_access_token, status = demo.proc_poll_job_completion(ades_base_url, job_location_path, interval=10, id_token=user_id_token, access_token=ades_access_token)"
@@ -498,10 +617,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "polished-silence",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STATUS = 200 OK\n",
+      "HEADERS = {'Server': 'nginx/1.19.1', 'Date': 'Fri, 07 May 2021 12:58:06 GMT', 'Content-Type': 'application/json;charset=UTF-8', 'Transfer-Encoding': 'chunked', 'Vary': 'Accept-Encoding', 'Content-Encoding': 'gzip'}\n",
+      "BODY = {\n",
+      "  \"jobID\": \"3c6bdffe-af32-11eb-b802-56ffdbaa8a56\",\n",
+      "  \"status\": \"failed\",\n",
+      "  \"message\": \"eoepca: error registering results to resource manager workspace. Error return code: 400{\\\"message\\\":\\\"Failed to register product rm-user-eric/wf-3c6bdffe-af32-11eb-b802-56ffdbaa8a56/\\\"}\",\n",
+      "  \"progress\": \"100\",\n",
+      "  \"links\": [\n",
+      "    {\n",
+      "      \"href\": \"http://ades.test.185.52.193.87.nip.io//eric/watchjob/processes/nhi-0_0_3/jobs/3c6bdffe-af32-11eb-b802-56ffdbaa8a56\",\n",
+      "      \"rel\": \"self\",\n",
+      "      \"type\": \"application/json\",\n",
+      "      \"title\": \"get Status\"\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# Inspect response\n",
     "demo.response_summary(response)"
@@ -538,6 +680,98 @@
     "# API Processes - Job Result\n",
     "response, ades_access_token, stacCatalogUri = demo.proc_get_job_result(ades_base_url, job_location_path, id_token=user_id_token, access_token=ades_access_token)\n",
     "demo.response_summary(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85d86176-a142-4638-9928-bfe4d96c34d3",
+   "metadata": {},
+   "source": [
+    "**Inspecting the processing results**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3f845bc-b6ec-4178-ae7a-24887b53c0f5",
+   "metadata": {},
+   "source": [
+    "Retrieve access information to the user workspace S3 bucket (bucket name, access key and secret access key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0cd3cbe-440d-470c-9f44-ef4c1c79ad1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Init\n",
+    "workspace_url = \"https://workspace-api.\" + base_domain\n",
+    "workspace_access_token = None\n",
+    "\n",
+    "# Workspace - Get Details\n",
+    "workspace_name = \"rm-user-\" + USER_NAME.lower()\n",
+    "response, workspace_access_token = demo.workspace_get_details(workspace_url, workspace_name, id_token=user_id_token, access_token=workspace_access_token)\n",
+    "workspace_details = response.json()\n",
+    "\n",
+    "# Bucket details\n",
+    "bucket_name = workspace_details[\"storage\"][\"credentials\"][\"bucketname\"]\n",
+    "s3_access = workspace_details[\"storage\"][\"credentials\"][\"access\"]\n",
+    "s3_secret = workspace_details[\"storage\"][\"credentials\"][\"secret\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d63d963b-5983-4e04-8943-67879fbc8b68",
+   "metadata": {},
+   "source": [
+    "Print the content of the result stac catalog file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "209df83a-9427-4a04-9dcb-20398437fb65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Quick hack S3 access\n",
+    "import boto3\n",
+    "\n",
+    "# Init S3 session for Creodias\n",
+    "S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
+    "session = boto3.session.Session()\n",
+    "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
+    "\n",
+    "# Retrieve S3 key path of the catalog.json\n",
+    "stacCatalogUriS3Key = \"/\".join(stacCatalogUri.rsplit('/', 2)[-2:])\n",
+    "print(f\"Content of {stacCatalogUriS3Key} :\\n\")\n",
+    "\n",
+    "# Printing catalog.json\n",
+    "obj = s3resource.Object(bucket_name, stacCatalogUriS3Key)\n",
+    "catalogJson = json.loads(obj.get()['Body'].read().decode('utf-8'))\n",
+    "print(json.dumps(catalogJson, indent=4, sort_keys=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "331dacf7-234a-4010-b99a-cc22fbe0e2ac",
+   "metadata": {},
+   "source": [
+    "List all the files contained in the result folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62103255-8e8a-44fc-bfb4-4ce6715d62f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List result contents\n",
+    "bucket = s3resource.Bucket(bucket_name)\n",
+    "for obj in bucket.objects.filter(Prefix=f\"wf-{jobid}/\"):\n",
+    "    print(obj.key)"
    ]
   },
   {
@@ -657,7 +891,7 @@
     "#-------------------------------------------------------------------------------\n",
     "# Authenticate as UserB and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
-    "USER_NAME=\"demoB\"\n",
+    "USER_NAME=\"eric\"\n",
     "USER_PASSWORD=\"defaultPWD\"\n",
     "userb_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)"
    ]
