Adding Eric's workspace endpoint

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -53,8 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_endpoint = 'https://resource-catalogue.185.52.193.87.nip.io/'\n",
-    "#system_endpoint = 'https://resource-catalogue.demo.eoepca.org/'"
+    "#system_endpoint = 'https://resource-catalogue.185.52.193.87.nip.io/'\n",
+    "system_endpoint = 'https://resource-catalogue.demo.eoepca.org/'"
    ]
   },
   {
@@ -538,8 +538,9 @@
    },
    "outputs": [],
    "source": [
-    "workspace_endpoint = 'https://resource-catalogue.user.185.52.193.87.nip.io'\n",
-    "#workspace_endpoint = 'https://resource-catalogue.user.demo.eoepca.org'"
+    "#workspace_endpoint = 'https://resource-catalogue.user.185.52.193.87.nip.io'\n",
+    "#workspace_endpoint = 'https://resource-catalogue.user.demo.eoepca.org'\n",
+    "workspace_endpoint = 'https://resource-catalogue.rm-user-eric.185.52.193.87.nip.io'"
    ]
   },
   {
