Added Resource Management demo in 03 Demo notebook

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -21,7 +21,16 @@
     "import jwt\n",
     "import json\n",
     "import boto3\n",
-    "from awscli.customizations.s3.utils import split_s3_bucket_key"
+    "from awscli.customizations.s3.utils import split_s3_bucket_key\n",
+    "\n",
+    "from owslib.csw import CatalogueServiceWeb\n",
+    "from owslib.fes import And, Or, PropertyIsEqualTo, PropertyIsGreaterThanOrEqualTo, PropertyIsLessThanOrEqualTo, PropertyIsLike, BBox, SortBy, SortProperty\n",
+    "from owslib.wms import WebMapService\n",
+    "from geolinks import sniff_link\n",
+    "import folium\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pyops"
    ]
   },
   {
@@ -33,7 +42,27 @@
     "Alice uses the Processor Development Environment (PDE) to develop, test and package an application.\n",
     "Alice's published outputs are:\n",
     "* Docker image published to DockerHub\n",
-    "* Application Package (CWL) published to Resource Catalogue (TBD) and/or GitHub - accessible by href"
+    "* Application Package (CWL) published to Resource Catalogue (TBD) and/or GitHub - accessible by href\n",
+    "\n",
+    "The following demonstrates how to discover the Application Package from Alice's workspace through the Resource Catalogue API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "410334c4-2d8b-4a37-ac1b-208c78c63df5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alice_workspace_endpoint = 'https://resource-catalogue.user.185.52.193.87.nip.io'\n",
+    "#workspace_endpoint = 'https://resource-catalogue.rm-user-alice.185.52.193.87.nip.io'\n",
+    "csw = CatalogueServiceWeb(alice_workspace_endpoint,timeout=30)\n",
+    "csw.getrecords2(maxrecords=10)\n",
+    "print(\"Alice's workspace records:\")\n",
+    "for rec in csw.records:\n",
+    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')\n",
+    "print(\"URL for Application s-expression:\")\n",
+    "csw.records['s-expression'].references"
    ]
   },
   {
@@ -99,9 +128,9 @@
    "metadata": {},
    "source": [
     "## Data Discovery\n",
-    "**TBD - Needs EOX/EOfarm support to elaborate this**<br>\n",
+    "\n",
     "Eric discovers data using platform services (Resource Catalogue / DAS) and QGIS\n",
-    "* OpenSearch endpoint\n",
+    "* CSW and OpenSearch endpoints\n",
     "* Data visualisation"
    ]
   },
@@ -110,17 +139,215 @@
    "id": "professional-photograph",
    "metadata": {},
    "source": [
-    "### Resource Catalogue - OpenSearch"
+    "### Resource Catalogue CSW and OpenSearch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b4b0ad8-7bc6-4950-ae10-cd10af55d45e",
+   "metadata": {},
+   "source": [
+    "In this part of the demo, Eric uses the system level resource catalogue endpoint to discover data collections and datasets.\n",
+    "\n",
+    "[OWSLib](https://geopython.github.io/OWSLib) is a Python package for client programming with Open Geospatial Consortium (OGC) web service (hence OWS) interface standards, and their related content models. In this demo we’ll work with the CSW, WMS and WCS interfaces.\n",
+    "\n",
+    "The `owslib.csw` class of OWSLib is instantiated and service metadata are shown."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "seven-organization",
+   "id": "809938e9-6671-4329-8ee7-369dc74763d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TBD"
+    "system_endpoint = 'https://resource-catalogue.demo.eoepca.org/'\n",
+    "csw = CatalogueServiceWeb(system_endpoint, timeout=30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c14b9881-8147-4855-8cc6-f13d5ca7cc91",
+   "metadata": {},
+   "source": [
+    "Service metadata shown here include supported operations and queryables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c26edaff-365d-4207-98e8-27316c54a2f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[op.name for op in csw.operations]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c550f80-7564-49d9-8e18-44ac88efc6c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csw.get_operation_by_name('GetRecords').constraints"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8091a9b6-bc74-4824-b032-0e50477532ee",
+   "metadata": {},
+   "source": [
+    "Eric can make a GetRecords request to get all records of the catalogue, with a page limit of 10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0d5c0b2-c11b-4798-8b42-d5e206c8cd00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csw.getrecords2(maxrecords=10)\n",
+    "csw.results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "271a402f-9ef0-408b-8ea4-4fe9b3934184",
+   "metadata": {},
+   "source": [
+    "Eric wishes to discover data with usage of filters, an OGC Filter can be used. Here we demonstrate how to create spatial (`bbox`), temporal (`time`), and attribute (`apiso:CloudCover`) filters combined with logical operators like and/or"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46cfb4e6-64d0-4dcf-b8ca-e57251dbf017",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bbox_query = BBox([37, 13.9, 37.9, 15.1])\n",
+    "begin = PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_begin', literal='2021-04-02 00:00')\n",
+    "end = PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_end', literal='2021-04-02 23:59')\n",
+    "cloud = PropertyIsLessThanOrEqualTo(propertyname='apiso:CloudCover', literal='20')\n",
+    "filter_list = [\n",
+    "    And(\n",
+    "        [\n",
+    "            bbox_query,  # bounding box\n",
+    "            begin, end,  # start and end date\n",
+    "            cloud        # cloud\n",
+    "        ]\n",
+    "    )\n",
+    "]\n",
+    "csw.getrecords2(constraints=filter_list, outputschema='http://www.isotc211.org/2005/gmd')\n",
+    "csw.results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fee0258c-efdd-4875-9867-c7cccef088d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for rec in csw.records:\n",
+    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].identification.identtype}\\ntitle: {csw.records[rec].identification.title}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19822cd1-9772-4195-902a-9aea10e2131f",
+   "metadata": {},
+   "source": [
+    "Eric selects one record with the identifier and discovers the available links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f76d0c37-f277-44cb-8e0d-25d28c5c1845",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csw.getrecordbyid(id=['S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'])\n",
+    "rec = csw.records['S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE']\n",
+    "rec.title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "913f70ab-631f-4c93-8956-797bc4066f61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rec.references"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b53fcf1-877f-48d0-b4d7-dd2ffdd023aa",
+   "metadata": {},
+   "source": [
+    "Eric can also see the record footprint on a map, using the [Folium](https://github.com/python-visualization/folium) Python library:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b0bb9ad-e4d7-4f03-9d04-b03349246b7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = folium.Map(location=[38, 20], zoom_start=6, tiles='OpenStreetMap')\n",
+    "folium.Rectangle(bounds=[[float(rec.bbox.miny), float(rec.bbox.minx)], [float(rec.bbox.maxy), float(rec.bbox.maxx)]]).add_to(m)\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac003207-d89e-4169-a337-ae33fa90da9f",
+   "metadata": {},
+   "source": [
+    "The same record can also be retrieved from the Resource Catalogue using the OpenSearch API and the dataset identifier:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c68f8b6-10b7-4141-bac4-8dbbfe96e552",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url='https://resource-catalogue.demo.eoepca.org/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&recordids=S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'\n",
+    "S = requests.Session()\n",
+    "R = S.get(url=url)\n",
+    "bs = BeautifulSoup(R.text, 'xml')\n",
+    "print(bs.prettify())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9225e423-fdc1-4918-996e-454d817ac135",
+   "metadata": {},
+   "source": [
+    "Eric can also use a generic OpenSearch client to query the Resource Catalogue.\n",
+    "\n",
+    "Eric can also include parameters in the search, like the parent identifier for collection level search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6b224c5-386b-4ef7-8ade-c7fbe9223659",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opensearch_endpoint='https://resource-catalogue.demo.eoepca.org/?service=CSW&version=3.0.0&request=GetCapabilities&mode=opensearch'\n",
+    "client = pyops.Client(description_xml_url=opensearch_endpoint)\n",
+    "results = client.search(params={\"{eo:parentIdentifier?}\": {\"value\": \"S2MSI2A\"}})\n",
+    "len(results)"
    ]
   },
   {
@@ -128,17 +355,113 @@
    "id": "instrumental-wrestling",
    "metadata": {},
    "source": [
-    "### Data Access Services - WMS, WCS (TBD)"
+    "### Data Access Services - WMS, WCS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f07d2fae-ab84-4221-9fa3-89b38edcb9f6",
+   "metadata": {},
+   "source": [
+    "Eric has already discovered the dataset to use by using the OWSLib CSW client.\n",
+    "\n",
+    "Using the [geolinks](https://github.com/geopython/geolinks) Python library, Eric can filter the links that are of a specific type (here WMS and WCS links to be used for visualization)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acting-consistency",
+   "id": "a9194e20-d671-411f-99a8-3bb7e4c2259b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TBD"
+    "system_endpoint = 'https://resource-catalogue.demo.eoepca.org/'\n",
+    "csw = CatalogueServiceWeb(system_endpoint, timeout=30)\n",
+    "scene_id='S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'\n",
+    "csw.getrecordbyid(id=[scene_id])\n",
+    "links = csw.records[scene_id].references\n",
+    "for link in links:\n",
+    "    scheme = link['scheme']\n",
+    "    if 'WMS' in scheme:\n",
+    "        wms_endpoint=link['url']\n",
+    "        print(link['url'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "584239d3-e4f0-4fe1-9794-6977f62ee55c",
+   "metadata": {},
+   "source": [
+    "After discovering the dataset, Eric can identify the WMS link and use the OWSLib WMs client to visualize the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77890480-2227-4196-b437-e931760485c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wms = WebMapService(wms_endpoint, version='1.3.0')\n",
+    "wms[scene_id].title\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cd425cf-f4ee-4650-a930-6487fb1e2efc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(wms.contents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "682252a2-4ca6-4ebd-90bc-80f9b8e863ae",
+   "metadata": {},
+   "source": [
+    "Eric can visualize the WMS GetMap request from matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "007dbc5e-065c-4657-9fad-004b8a0ef9d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import os, sys\n",
+    "import matplotlib.image as mpimg\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def getMap(wms,layerName,bbox,filename):\n",
+    "    wms.getOperationByName('GetMap').formatOptions\n",
+    "    img = wms.getmap(layers=[layerName],\n",
+    "                 size=(600,300),\n",
+    "                 srs='EPSG:4326',\n",
+    "                 bbox=bbox,\n",
+    "                 format='image/png',\n",
+    "                 transparent=True)\n",
+    "\n",
+    "    tmpfile = open(filename,'wb')\n",
+    "    tmpfile.write(img.read())\n",
+    "    tmpfile.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8cf7ba7-a407-45bf-a952-ed7b9f23d861",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "getMap(wms,'S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE__TRUE_COLOR',(13.8,36.9,15.1,37.9), 'rgb.png')\n",
+    "image1=mpimg.imread('rgb.png')\n",
+    "fig = plt.figure(figsize=(12,7))\n",
+    "img1=plt.imshow(image1,extent=[13.8,15.1,36.9,37.9],aspect='auto')\n",
+    "plt.show()"
    ]
   },
   {
@@ -671,11 +994,96 @@
    "metadata": {},
    "source": [
     "## Results Consumption\n",
-    "**TBD - Needs EOX/EOfarm support to elaborate this**<br>\n",
-    "* Results discovery - User's resource catalogue (OpenSearch)\n",
+    "\n",
+    "* Results discovery - User's resource catalogue\n",
     "* Results visualisation:\n",
     "  * Data access services\n",
     "  * QGIS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b746cf3-977a-4138-85ef-d430e735e148",
+   "metadata": {},
+   "source": [
+    "In this part of the demo, Eric will use the workspace resource catalogue endpoint to discover processing outputs and applications.  The workspace catalogue is local to the user, which also has federated access to the system catalogue."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "641bb9f9-7b31-452a-92d0-6ea91fc1c781",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workspace_endpoint = 'https://resource-catalogue.rm-user-eric.185.52.193.87.nip.io'\n",
+    "csw = CatalogueServiceWeb(workspace_endpoint,timeout=30)\n",
+    "csw.getrecords2(maxrecords=10)\n",
+    "csw.results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18708401-c31e-4a61-80cf-2a153e07ae70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for rec in csw.records:\n",
+    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6640703-ed13-4176-ad6a-1a0b1b1e6a78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scene_id='INDEX_S2A_MSIL2A_20191216T004701_N0213_R102_T53HPA_20191216T024808'\n",
+    "csw.getrecordbyid(id=[scene_id])\n",
+    "links = csw.records[scene_id].references\n",
+    "csw.records['INDEX_S2A_MSIL2A_20191216T004701_N0213_R102_T53HPA_20191216T024808'].references\n",
+    "for link in links:\n",
+    "    scheme = link['scheme']\n",
+    "    if 'WMS' in scheme:\n",
+    "        wms_endpoint=link['url']\n",
+    "        print(link['url'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57d1dec1-30ac-4735-98ef-b89bc1b7c942",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wms = WebMapService(wms_endpoint, version='1.3.0')\n",
+    "list(wms.contents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96702a09-9f94-49a4-8e74-fe6520210f1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wms[scene_id].boundingBoxWGS84"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbae9600-593e-4182-977e-878ed06e41e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "getMap(wms,'INDEX_S2A_MSIL2A_20191216T004701_N0213_R102_T53HPA_20191216T024808',(13.8,36.9,15.1,37.9), 'rgb.png')\n",
+    "image1=mpimg.imread('rgb.png')\n",
+    "fig = plt.figure(figsize=(12,7))\n",
+    "img1=plt.imshow(image1,extent=[13.8,15.1,36.9,37.9],aspect='auto')\n",
+    "plt.show()"
    ]
   }
  ],
